; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_microcode_intel.c_update_match_cpu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_microcode_intel.c_update_match_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpu_signature = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cpu_signature*, i32, i32)* @update_match_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_match_cpu(%struct.cpu_signature* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.cpu_signature*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.cpu_signature* %0, %struct.cpu_signature** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.cpu_signature*, %struct.cpu_signature** %4, align 8
  %9 = getelementptr inbounds %struct.cpu_signature, %struct.cpu_signature* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load %struct.cpu_signature*, %struct.cpu_signature** %4, align 8
  %13 = getelementptr inbounds %struct.cpu_signature, %struct.cpu_signature* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @sigmatch(i32 %7, i32 %10, i32 %11, i32 %14)
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  %18 = zext i1 %17 to i64
  %19 = select i1 %17, i32 0, i32 1
  ret i32 %19
}

declare dso_local i32 @sigmatch(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
